clusters/holton-talos-prod/home-holton-xyz/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: home-holton-xyz-gateway
  namespace: home-holton-xyz
spec:
  gatewayClassName: cilium
  listeners:
  - name: https
    hostname: home.holton.xyz
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: home-holton-xyz-cert
        kind: Secret
    allowedRoutes:
      namespaces:
        from: Same
