clusters/holton-talos-prod/home-holton-xyz/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-holton-xyz
  namespace: home-holton-xyz
spec:
  parentRefs:
  - name: home-holton-xyz-gateway
    namespace: home-holton-xyz
    sectionName: https
  hostnames:
  - home.holton.xyz
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: home-holton-xyz
      port: 80
